docs/grammar.bnf
# Tokens

token ::=
    | ident
    | int_lit
    | global_name
    | local_name
    | label
    | "(" | ")" | "{" | "}" | "[" | "]"
    | "," | "="
    | space
    | comment
ident ::= [a-zA-Z$._-][a-zA-Z0-9$._-]*
space ::= [ \t\n\r\0]+
comment ::= ";" [^\n\r]* | "/*" .*? "*/"

# Syntax

program ::= func*

type ::= int_ty | ptr_ty | struct_ty | array_ty
int_ty ::= "i16"
ptr_ty ::= "ptr"
struct_ty ::= "{" (type ("," type)*)? "}"
array_ty ::= "[" int_lit "x" type "]"
bool_ty ::= "i1"

lit ::= int_lit | ptr_lit | struct_lit | array_lit | bool_lit
int_lit ::= -?[0-9]+
ptr_lit ::= "null"
struct_lit ::= "{" (type lit ("," type lit)*)? "}"
array_lit ::= "[" (type lit ("," type lit)*)? "]"
bool_lit ::= "0" | "1"

global_name ::= "@" name
local_name ::= "%" name
label ::= name ":"
name ::= ident | [0-9]+

val ::= local_name | int_lit | ptr_lit | struct_lit | array_lit
ptr_val ::= local_name | ptr_lit
bool_val ::= local_name | bool_lit

func ::= "define" type global_name params "{" bb* "}"
params ::= "(" (param ("," param)*)? ")"
param ::= type local_name
args ::= "(" (arg ("," arg)*)? ")"
arg ::= type val
bb ::= label inst* inst_term

inst ::=
    | local_name "=" arith int_ty val "," val
    | local_name "=" "extractvalue" struct_ty val "," int_lit ("," int_lit)*
    | local_name "=" "insertvalue" struct_ty val "," type val "," int_lit ("," int_lit)*
    | local_name "=" "alloca" type ("," int_ty val)?
    | local_name "=" "load" type "," ptr_ty ptr_val
    | "store" type val "," ptr_ty ptr_val
    | local_name "=" "icmp" cond bool_ty val "," val
    | local_name "=" "phi" type "[" val "," local_name "]" ("," "[" val "," local_name "]")*
    | local_name "=" "call" type global_name args
arith ::=
    | "add" | "sub" | "mul"
    | "udiv" | "sdiv" | "urem" | "srem"
    | "shl" | "lshr" | "ashr"
    | "and" | "or" | "xor"

inst_term ::=
    | "ret" type val
    | "br" bool_ty cond "," "label" local_name "," "label" local_name
    | "br" "label" local_name

cond ::=
    | "eq" | "ne"
    | "ugt" | "uge" | "ult" | "ule"
    | "sgt" | "sge" | "slt" | "sle"
